--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
-version: '3'
+version: "3"
 
 services:
-  
-# Database
+  # Database
   mysql:
-    image: mysql
+    image: mysql:latest
     command: mysqld --default-authentication-plugin=mysql_native_password
     container_name: mysql
     restart: unless-stopped
@@ -12,9 +11,9 @@ services:
       MYSQL_ROOT_PASSWORD: "123"
       MYSQL_ROOT_HOST: "%"
     ports:
-      - 3306:3306  
+      - 3306:3306
 
-# Apache
+  # Apache
   apache:
     image: thecodingmachine/php:8.0.14-v4-apache-node10
     #container_name: apache
@@ -22,15 +21,15 @@ services:
     ports:
       - 8083:80
     environment:
-            PHP_EXTENSION_PGSQL: 1
-            PHP_EXTENSION_XDEBUG: 1
-            PHP_EXTENSION_MONGODB: 1
-            PHP_EXTENSION_MONGO: 1
-            APACHE_EXTENSION_AUTOINDEX: 1
+      PHP_EXTENSION_PGSQL: 1
+      PHP_EXTENSION_XDEBUG: 1
+      PHP_EXTENSION_MONGODB: 1
+      PHP_EXTENSION_MONGO: 1
+      APACHE_EXTENSION_AUTOINDEX: 1
     volumes:
       - ./www:/var/www/html
 
-# Frontend
+  # Frontend
   phpmyadmin:
     image: bitnami/phpmyadmin:latest
     container_name: phpmyadmin
