--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
   # Database
   mysql:
-    image: mysql:latest
+    image: mysql:8.0
     command: mysqld --default-authentication-plugin=mysql_native_password
     container_name: mysql
     restart: unless-stopped
